--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-lasso = "0.7"
+lasso = { version = "0.7", features = ["multi-threaded"] }
 parking_lot = "0.12"
 rand = "0.9.2"
